# VectorAdd

./: .gitignore  CMakeLists.txt  README.md  host.cpp
CL/: cl1.hpp
Kernels/: add.cl  add1.cl
